# organize_desktop

./: LICENSE  README.md  pyproject.toml  run.py
app/: __init__.py  main.py
app/core/: __init__.py  config_manager.py  file_watcher.py  rule_engine.py  settings.py
app/ui/: __init__.py  config_editor.py  log_viewer.py  main_window.py  rule_editor.py  settings_dialog.py  styles.py
app/utils/: __init__.py  constants.py  helpers.py
docs/: examples.md  installation.md  quickstart.md  user_guide.md
tests/: __init__.py  test_core.py
